# fin-data

./: README.md  csv2parquet.py  csv2parquet_aggs.py  csv2parquet_options_quotes.py  csv2parquet_options_trades.py  csv2parquet_stocks_quotes.py  csv2parquet_stocks_trades.py  download_alpaca_assets.py  download_dividends.py  download_etf_holdings.py  download_flatfiles.py  download_nasdaq_news.py  download_news.py  download_polygon.py  download_splits.py  download_tickers.py  gen_aggs_adjusted.py  gen_aggs_by_ticker.py  gen_bidask_spreads.py  gen_combined.py  gen_day_aggs_adjusted.py  gen_dividends.py  gen_greeks.py  gen_last_n_adjusted_day_aggs.py  gen_last_n_day_aggs.py  gen_matrix.py  gen_merged_matrix.py  gen_options_indicator_matrix.py  gen_options_matrix.py  gen_options_matrix_old.py  gen_options_tq_aggs.py  gen_splits.py  gen_stocks_matrix.py  gen_stocks_tq_aggs.py  json2parquet_press.py  plot_chart_around.py  polygon.json.sample  predict_spx_from_spy.py  update_all.sh  update_daily.sh  (+2 more)
historical_quote_server/: client.py  server.py  setup.py
historical_quote_server/historical_quote_server/: client.py  server.py
historical_quote_server/historical_quote_server.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python-findata/: setup.cfg
python-findata/findata/: __init__.py  option_price_provider.py  option_spread.py
python-findata/findata.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vis/: option_spread.py  plot_option_chain.py  plot_option_spread.py  plot_option_volumes.py  plot_straddle_slopes.py  plot_straddle_surface.py
