[metadata]
name = findata
version = 0.1.0
description = Findata reader
author = Dheera Venkatraman
author_email = dheera@dheera.net
url = https://github.com/dheera/python-batch-regression
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests

